Added additional MediaType to support Wavefront and Pixar.