@@ -3,7 +3,7 @@
     <parent>
         <artifactId>proteus-project</artifactId>
         <groupId>io.sinistral</groupId>
-        <version>0.5.2-SNAPSHOT</version>
+		<version>0.6.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -73,10 +73,20 @@
                 <artifactId>maven-release-plugin</artifactId>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
+         	<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<release>${java.version}</release>
+					<compilerVersion>${java.version}</compilerVersion>
+					<compilerArgument>-parameters</compilerArgument>
+					<compilerArgs>
+						<arg>-parameters</arg>
+						<arg>--add-opens=java.base/java.lang=ALL-UNNAMED --illegal-access=deny</arg>
+					</compilerArgs>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
